--- a/.github/workflows/mirror_all.yaml
+++ b/.github/workflows/mirror_all.yaml
@@ -22,6 +22,10 @@ jobs:
         run: |
           mkdir -p files
 
+          git clone --depth 1 "https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/PharmaForest/maxims4sas.git" temp
+          cp temp/maxims4sas.zip ./maxims4sas.zip
+          rm -rf temp
+
           git clone --depth 1 "https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/PharmaForest/SASPACer.git" temp
           cp temp/saspacer.zip ./saspacer.zip
           rm -rf temp
